Updates for 1.9.0 RC3

--- a/libsrc/bulkio.pc.in
+++ b/libsrc/bulkio.pc.in
@@ -7,4 +7,4 @@ Name: bulkio
 Description: BULKIO base class library
 Version: @BULKIO_API_VERSION@
 Libs: -L${libdir} -lbulkio-@BULKIO_API_VERSION@
-Cflags: -I${includedir}/bulkio -I${libdir}/bulkio/include
+Cflags: -I${includedir}/bulkio 
