--- a/.project
+++ b/.project
@@ -1,30 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-This file is protected by Copyright. Please refer to the COPYRIGHT file 
-distributed with this source distribution.
-
-This file is part of REDHAWK core.
-
-REDHAWK core is free software: you can redistribute it and/or modify it under 
-the terms of the GNU Lesser General Public License as published by the Free 
-Software Foundation, either version 3 of the License, or (at your option) any 
-later version.
-
-REDHAWK core is distributed in the hope that it will be useful, but WITHOUT ANY 
-WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR 
-A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more 
-details.
-
-You should have received a copy of the GNU Lesser General Public License along 
-with this program.  If not, see http://www.gnu.org/licenses/.
--->
-
 <projectDescription>
 	<name>bulkioInterfaces</name>
 	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
+		<buildCommand>
+			<name>org.python.pydev.PyDevBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 		<buildCommand>
 			<name>gov.redhawk.ide.idl.builder</name>
 			<arguments>
@@ -56,7 +41,7 @@ with this program.  If not, see http://www.gnu.org/licenses/.
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildCommand</key>
-					<value>${ProjDirPath}/build.sh</value>
+					<value>${ProjDirPath}//build.sh</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
@@ -110,5 +95,6 @@ with this program.  If not, see http://www.gnu.org/licenses/.
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 		<nature>gov.redhawk.ide.idl.natures.idllibrary</nature>
+		<nature>org.python.pydev.pythonNature</nature>
 	</natures>
 </projectDescription>
