--- a/libsrc/testing/tests/cpp/configure.ac
+++ b/libsrc/testing/tests/cpp/configure.ac
@@ -8,6 +8,9 @@ AC_PROG_CXX
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PREFIX_DEFAULT(${OSSIEHOME})
+AX_BOOST_BASE([1.41])
+AX_BOOST_THREAD
+
 
 OSSIE_CHECK_OSSIE
 OSSIE_OSSIEHOME_AS_PREFIX
