--- a/libsrc/testing/.gitignore
+++ b/libsrc/testing/.gitignore
@@ -2,4 +2,5 @@ components/CPP_Ports/cpp/CPP_Ports
 components/Java_Ports/java/bin/
 components/TestLargePush/cpp/TestLargePush
 components/TestLargePush/java/bin/
+components/multiout_attachable/cpp/multiout_attachable
 tests/cpp/Bulkio
