--- a/libsrc/testing/components/CPP_Ports/cpp/configure.ac
+++ b/libsrc/testing/components/CPP_Ports/cpp/configure.ac
@@ -15,6 +15,7 @@ PKG_CHECK_MODULES([PROJECTDEPS], [ossie >= 1.8 omniORB4 >= 4.0.0])
 OSSIE_ENABLE_LOG4CXX
 AX_BOOST_BASE([1.41])
 AX_BOOST_THREAD
+AX_BOOST_SYSTEM
 #CHECK_VECTOR_IMPL
 
 export PKG_CONFIG_PATH="../../../..:../../../../.."
