--- a/libsrc/testing/.gitignore
+++ b/libsrc/testing/.gitignore
@@ -3,4 +3,5 @@ components/Java_Ports/java/bin/
 components/TestLargePush/cpp/TestLargePush
 components/TestLargePush/java/bin/
 components/multiout_attachable/cpp/multiout_attachable
+components/sri_changed_cpp/cpp/sri_changed_cpp
 tests/cpp/Bulkio
