--- a/libsrc/testing/components/CPP_Ports/cpp/configure.ac
+++ b/libsrc/testing/components/CPP_Ports/cpp/configure.ac
@@ -37,7 +37,7 @@ AX_BOOST_THREAD
 AX_BOOST_SYSTEM
 #CHECK_VECTOR_IMPL
 
-export PKG_CONFIG_PATH="../../../..:../../../../.."
+export PKG_CONFIG_PATH="../../../..:../../..":$PKG_CONFIG_PATH
 PKG_CHECK_MODULES([BIO], [bulkio >= 1.10])
 
 AC_CONFIG_FILES(Makefile)
