--- a/libsrc/testing/components/Java_Ports/java/configure.ac
+++ b/libsrc/testing/components/Java_Ports/java/configure.ac
@@ -40,7 +40,7 @@ AC_SUBST(JAVAH)
 AC_SUBST(JAR)
 AC_SUBST(JAVA)
 
-export PKG_CONFIG_PATH="../../../..:../../../../.."
+export PKG_CONFIG_PATH="../../../..:../../..":$PKG_CONFIG_PATH
 PKG_CHECK_MODULES([BIO], [bulkio >= 1.10])
 
 AC_CONFIG_FILES(Makefile)
