--- a/libsrc/testing/components/TestLargePush/cpp/configure.ac
+++ b/libsrc/testing/components/TestLargePush/cpp/configure.ac
@@ -40,7 +40,7 @@ AX_BOOST_THREAD
 
 AX_BOOST_SYSTEM
 
-export PKG_CONFIG_PATH="../../../..:../../../../.."
+export PKG_CONFIG_PATH="../../../..:../../..":$PKG_CONFIG_PATH
 PKG_CHECK_MODULES([BIO], [bulkio >= 1.10])
 
 AC_CONFIG_FILES([Makefile])
